// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Cart Page Testando styled do Address 1`] = `
<p
  className="MuiTypography-root-1 MuiTypography-body1-10 sc-ifAKCX hoDFhD"
/>
`;

exports[`Testing Cart Page Testando styled do AddressTitle 1`] = `
<p
  className="MuiTypography-root-1 MuiTypography-body1-10 sc-bxivhb lgSpXn"
/>
`;

exports[`Testing Cart Page Testando styled do CartWrapper 1`] = `
<div
  className="sc-bdVaJa iVDUrv"
/>
`;

exports[`Testing Cart Page Testando styled do DeliveryAddressWrapper 1`] = `
<div
  className="sc-htpNat jNKREZ"
/>
`;

exports[`Testing Cart Page Testando styled do DeliveryPrice 1`] = `
<p
  className="MuiTypography-root-1 MuiTypography-body1-10 sc-bZQynM jfRzGN"
/>
`;

exports[`Testing Cart Page Testando styled do PaymentMethod 1`] = `
<div
  className="sc-iwsKbI bSTmat"
/>
`;

exports[`Testing Cart Page Testando styled do PaymentRadioGroup 1`] = `
<div
  className="MuiFormGroup-root-37 sc-gqjmRU bcQBnP"
  role="radiogroup"
/>
`;

exports[`Testing Cart Page Testando styled do PaymentTitle 1`] = `
<p
  className="MuiTypography-root-1 MuiTypography-body1-10 sc-gZMcBi kYPbPP"
/>
`;

exports[`Testing Cart Page Testando styled do PaymentWrapper 1`] = `
<div
  className="sc-EHOje dUFlZL"
/>
`;

exports[`Testing Cart Page Testando styled do RadioCustom 1`] = `
<span
  className="MuiButtonBase-root-54 MuiIconButton-root-48 MuiPrivateSwitchBase-root-44 MuiRadio-root-39 MuiRadio-colorSecondary-43 sc-jTzLTM jQqlbp"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={null}
>
  <span
    className="MuiIconButton-label-53"
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-57"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      className="MuiPrivateSwitchBase-input-47"
      onChange={[Function]}
      type="radio"
    />
  </span>
  <span
    className="MuiTouchRipple-root-66"
  />
</span>
`;

exports[`Testing Cart Page Testando styled do Title 1`] = `
<p
  className="MuiTypography-root-1 MuiTypography-body1-10 sc-bwzfXH fMRyqN"
/>
`;

exports[`Testing Cart Page Testando styled do TotalPrice 1`] = `
<div
  className="sc-gzVnrw jlHySg"
/>
`;
